--- a/docs/config/tech-docs.yml
+++ b/docs/config/tech-docs.yml
@@ -1,5 +1,5 @@
 # Host to use for canonical URL generation (without trailing slash)
-host: api2.publish-teacher-training-courses.service.gov.uk
+host: api.publish-teacher-training-courses.service.gov.uk
 
 # Header-related options
 show_govuk_logo: true
