--- a/swagger/public_v1/template.yml
+++ b/swagger/public_v1/template.yml
@@ -8,7 +8,7 @@ info:
     email: becomingateacher@digital.education.gov.uk
   description: "API for DfE's postgraduate teacher training course service."
 servers:
-  - url: https://api2.publish-teacher-training-courses.service.gov.uk/api/public/{version}
+  - url: https://api.publish-teacher-training-courses.service.gov.uk/api/public/{version}
     description: "Production url."
     variables:
       version:
