Ignore node modules needed for api docs

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,7 @@ config/azure_environments.yml
 
 # Ignore sanitised production data dump
 *.sql.gz
+
+# Exclude api doc application node modules
+docs/node_modules
+docs/package-lock.json
