[3736] Fixed jsonapi as id can only be string

--- a/swagger/public_v1/template.yml
+++ b/swagger/public_v1/template.yml
@@ -272,7 +272,7 @@ components:
         - attributes
       properties:
         id:
-          type: integer
+          type: string
           example: 1
         type:
           type: string
