3736 - added documentation for the null provider

--- a/swagger/public_v1/template.yml
+++ b/swagger/public_v1/template.yml
@@ -296,6 +296,18 @@ components:
           $ref: "#/components/schemas/Included"
         jsonapi:
           $ref: "#/components/schemas/JSONAPI"
+    NotFoundResponse:
+      description: "This schema is used to return a not found response."
+      type: object
+      required:
+        - data
+        - jsonapi
+      properties:
+        data:
+          nullable: true
+          example: null
+        jsonapi:
+          $ref: "#/components/schemas/JSONAPI"
     ProviderSingleResponse:
       description: "This schema is used to return a single provider."
       type: object
