--- a/swagger/public_v1/template.yml
+++ b/swagger/public_v1/template.yml
@@ -415,6 +415,7 @@ components:
       type: object
       required:
         - data
+        - jsonapi
       properties:
         data:
           type: array
