--- a/swagger/public_v1/component_schemas/SubjectAreaAttributes.yml
+++ b/swagger/public_v1/component_schemas/SubjectAreaAttributes.yml
@@ -8,5 +8,5 @@ properties:
     example: "Primary"
   typename:
     type: string
-    description: "A unique identifier for the subject area."
+    description: "A type name for the subject area."
     example: "PrimarySubject"
