Fixes issue with rspec parallel xml outputs
Our currently implementation seems not to be working anyway. To simplify
our process we are now using .rspec_parallel as a single config file
Azure should be able to use this output to report test coverage in azure.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -73,7 +73,7 @@ steps:
     set -x
     $DOCKER_OVERRIDE exec -T web /bin/sh -c 'bundle config --local disable_exec_load true'
     $DOCKER_OVERRIDE exec -T web /bin/sh -c 'bundle exec rake parallel:setup'
-    $DOCKER_OVERRIDE exec -T web /bin/sh -c 'bundle exec rake "parallel:spec[,, -O .azure_parallel]"'
+    $DOCKER_OVERRIDE exec -T web /bin/sh -c 'bundle exec rake parallel:spec'
 
   displayName: 'Execute tests'
   env:
