Implement locations endpoint

--- a/swagger/public_v1/template.yml
+++ b/swagger/public_v1/template.yml
@@ -187,37 +187,42 @@ components:
       properties:
         code:
           type: string
-          example: "W"
+          example: "-"
         name:
           type: string
           description: "The name of the location."
-          example: "Henry Maynard Primary School"
+          example: "Main Site"
         street_address_1:
           type: string
-          description: "Building or street line one."
-          example: "The Rose Building"
+          description: "Building or street address line one."
+          example: "Barnsley Road"
         street_address_2:
           type: string
-          description: "Building or street line two."
-          example: "Maynard Road"
+          description: "Building or street address line two."
+          example: "Wath-upon-Dearne"
         city:
           type: string
           description: "Town or city."
-          example: "London"
+          example: "Rotherham"
         county:
           type: string
           description: "County."
-          example: "London"
+          example: "South Yorkshire"
         postcode:
           type: string
           description: "The postcode of the location."
-          example: "E17 9JE"
+          example: "S63 6PY"
         region_code:
           type: string
-          example: "london"
-        recruitment_cycle_year:
-          type: string
-          example: "2020"
+          example: "yorkshire_and_the_humber"
+        latitude:
+          type: number
+          description: "The latitude of the location."
+          example: 53.5082828
+        longitude:
+          type: number
+          description: "The longitude of the location."
+          example: -1.3603394
     LocationResource:
       description: "This schema provides metadata about a location."
       type: object
@@ -227,9 +232,11 @@ components:
           example: "11214485"
         type:
           type: string
-          example: "sites"
+          example: "locations"
         attributes:
           $ref: "#/components/schemas/LocationAttributes"
+        relationships:
+          $ref: "#/components/schemas/LocationRelationships"
     LocationListResponse:
       description: "This schema is used to return a collection of locations."
       type: object
@@ -240,6 +247,8 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/LocationResource"
+        included:
+          $ref: "#/components/schemas/Included"
         jsonapi:
           $ref: "#/components/schemas/JSONAPI"
     LocationStatusResource:
@@ -353,10 +362,11 @@ components:
     Resource:
       anyOf:
         - $ref: "#/components/schemas/CourseResource"
-        - $ref: "#/components/schemas/RecruitmentCycleResource"
-        - $ref: "#/components/schemas/SubjectResource"
         - $ref: "#/components/schemas/LocationResource"
         - $ref: "#/components/schemas/LocationStatusResource"
+        - $ref: "#/components/schemas/ProviderResource"
+        - $ref: "#/components/schemas/RecruitmentCycleResource"
+        - $ref: "#/components/schemas/SubjectResource"
       discriminator:
         propertyName: type
     ResourceIdentifier:
