Set EnforcedStyleForLeadingUnderscores to optional

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -24,4 +24,7 @@ Style/HashTransformKeys:
   Enabled: true
 Style/HashTransformValues:
   Enabled: true
+Naming/MemoizedInstanceVariableName:
+  EnforcedStyleForLeadingUnderscores: optional
+
 
