--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,17 +41,10 @@ services:
       - AGENT_JOBSTATUS=${AGENT_JOBSTATUS}
       - GIT_BRANCH=${GIT_BRANCH}
 
-  bg-geocode:
-    build:
-      args:
-        - DOCKER_REPOSITORY=${dockerHubUsername:-dfedigital}
-        - TEACHER_TRAINING_API=${dockerHubImageName:-teacher-training-api}
-        - CODE_VERSION=${GIT_BRANCH:-latest}
-      context: bg-geocode
-      cache_from:
-        - ${dockerHubUsername:-dfedigital}/teacher-training-bg-geocode:${GIT_BRANCH:-latest}
-    image: ${dockerHubUsername:-dfedigital}/teacher-training-bg-geocode:${GIT_BRANCH:-latest}
-    volumes:
+  bg:
+    image: ${dockerHubUsername:-dfedigital}/teacher-training-api:${GIT_BRANCH:-latest}
+    command: bundle exec sidekiq -c 5 -C config/sidekiq.yml
+    volumes: 
       - .:/app
     depends_on:
       - web
@@ -61,45 +54,3 @@ services:
       - DB_USERNAME=postgres
       - DB_PASSWORD=developmentpassword
       - SETTINGS__APPLICATION=teacher-training-api-bg-geocode
-
-  bg-mailer:
-    build:
-      args:
-        - DOCKER_REPOSITORY=${dockerHubUsername:-dfedigital}
-        - TEACHER_TRAINING_API=${dockerHubImageName:-teacher-training-api}
-        - CODE_VERSION=${GIT_BRANCH:-latest}
-      context: bg-mailer
-      cache_from:
-        - ${dockerHubUsername:-dfedigital}/teacher-training-bg-mailer:${GIT_BRANCH:-latest}
-    image: ${dockerHubUsername:-dfedigital}/teacher-training-bg-mailer:${GIT_BRANCH:-latest}
-    volumes:
-      - .:/app
-    depends_on:
-      - web
-      - db
-    environment:
-      - DB_HOSTNAME=db
-      - DB_USERNAME=postgres
-      - DB_PASSWORD=developmentpassword
-      - SETTINGS__APPLICATION=teacher-training-api-bg-mailer
-
-  bg-jobs:
-    build:
-      args:
-        - DOCKER_REPOSITORY=${dockerHubUsername:-dfedigital}
-        - TEACHER_TRAINING_API=${dockerHubImageName:-teacher-training-api}
-        - CODE_VERSION=${GIT_BRANCH:-latest}
-      context: bg-jobs
-      cache_from:
-        - ${dockerHubUsername:-dfedigital}/teacher-training-bg-jobs:${GIT_BRANCH:-latest}
-    image: ${dockerHubUsername:-dfedigital}/teacher-training-bg-jobs:${GIT_BRANCH:-latest}
-    volumes:
-      - .:/app
-    depends_on:
-      - web
-      - db
-    environment:
-      - DB_HOSTNAME=db
-      - DB_USERNAME=postgres
-      - DB_PASSWORD=developmentpassword
-      - SETTINGS__APPLICATION=teacher-training-api-bg-jobs
