--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,10 @@ version: '3.4'
 volumes:
   dbdata:
 services:
+ 
+  redis:
+    image: redis
+    
   db:
     image: postgres:9.6-alpine
     # To preserve data between runs of docker-compose, we mount a folder from the host machine.
@@ -33,6 +37,7 @@ services:
     depends_on:
       - db
       - middleman
+      - redis
     environment:
       - DB_HOSTNAME=db
       - DB_USERNAME=postgres
@@ -40,6 +45,7 @@ services:
       - CC_TEST_REPORTER_ID=${CC_TEST_REPORTER_ID}
       - AGENT_JOBSTATUS=${AGENT_JOBSTATUS}
       - GIT_BRANCH=${GIT_BRANCH}
+      - REDIS_URL=redis://redis:6379
 
   bg:
     image: ${dockerHubUsername:-dfedigital}/teacher-training-api:${GIT_BRANCH:-latest}
@@ -49,8 +55,10 @@ services:
     depends_on:
       - web
       - db
+      - redis
     environment:
       - DB_HOSTNAME=db
       - DB_USERNAME=postgres
       - DB_PASSWORD=developmentpassword
-      - SETTINGS__APPLICATION=teacher-training-api-bg-geocode
+      - SETTINGS__APPLICATION=teacher-training-api-bg
+      - REDIS_URL=redis://redis:6379
