--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Pin Terraform version
+      uses: hashicorp/setup-terraform@v1
+      with:
+        terraform_version: 0.12.29
 
     - name: Get values for current commit
       run: |
@@ -83,9 +87,10 @@ jobs:
 
     - name: Install Terraform CloudFoundry Provider
       run: |
-          mkdir -p $HOME/.terraform.d/plugins/linux_amd64
-          wget -O ${{ env.CF_PROVIDER }} https://github.com/cloudfoundry-community/terraform-provider-cf/releases/latest/download/terraform-provider-cloudfoundry_linux_amd64
-          chmod +x ${{ env.CF_PROVIDER }}
+        mkdir -p $HOME/.terraform.d/plugins/linux_amd64
+        cd $HOME/.terraform.d/plugins/linux_amd64
+        wget -q -O zipfile https://github.com/cloudfoundry-community/terraform-provider-cloudfoundry/releases/download/v0.12.4/terraform-provider-cloudfoundry_0.12.4_linux_amd64.zip && unzip zipfile && rm zipfile
+
       env:
         CF_PROVIDER: $HOME/.terraform.d/plugins/linux_amd64/terraform-provider-cloudfoundry
 
@@ -104,8 +109,7 @@ jobs:
 
     - name: Terraform plan
       run: |
-          terraform plan -auto-approve \
-            -var-file=${{ env.PAAS_TF_DIR }}/${{ env.TERRAFORM_VAR_FILE }} \
+          terraform plan -var-file=${{ env.PAAS_TF_DIR }}/${{ env.TERRAFORM_VAR_FILE }} \
             ${{ env.PAAS_TF_DIR }}
       env:
         BACKEND_STORAGE_ACCOUNT_NAME: s121d01tfstatestr
@@ -120,21 +124,14 @@ jobs:
         TF_VAR_password: ${{ secrets.TF_VAR_password }}
         TF_VAR_SECRET_KEY_BASE: ${{ secrets.TF_VAR_SECRET_KEY_BASE }}
         TF_VAR_SENTRY_DSN: ${{ secrets.TF_VAR_SENTRY_DSN }}
-        # Let's confirm if these variables are required
-        #TF_VAR_SETTINGS__GOOGLE__GCP_API_KEY: ${{ secrets.TF_VAR_SETTINGS__GOOGLE__GCP_API_KEY }}
-        #TF_VAR_SETTINGS__GOOGLE__MAPS_API_KEY: ${{ secrets.TF_VAR_SETTINGS__GOOGLE__MAPS_API_KEY }}
-        #TF_VAR_AUTHENTICATION_TOKEN: ${{ secrets.TF_VAR_AUTHENTICATION_TOKEN }}
-        #TF_VAR_SETTINGS__AUTHENTICATION__SECRET: ${{ secrets.SETTINGS__AUTHENTICATION__SECRET }}
         TF_VAR_SETTINGS__GOVUK_NOTIFY__API_KEY: ${{ secrets.SETTINGS__GOVUK_NOTIFY__API_KEY }}
         TF_VAR_SETTINGS__LOGSTASH__HOST: ${{ secrets.SETTINGS__LOGSTASH__HOST }}
-        #TF_VAR_SETTINGS__SYSTEM_AUTHENTICATION_TOKEN: ${{ secrets.SETTINGS__SYSTEM_AUTHENTICATION_TOKEN }}
-        # TF_VAR_APPINSIGHTS_INSTRUMENTATIONKEY: ${{ secrets.TF_VAR_APPINSIGHTS_INSTRUMENTATIONKEY }}
+
 
     - name: Terraform apply
       run: |
-          terraform apply -auto-approve \
-            -var-file=${{ env.PAAS_TF_DIR }}/${{ env.TERRAFORM_VAR_FILE }} \
-            ${{ env.PAAS_TF_DIR }}
+          terraform apply -var-file=${{ env.PAAS_TF_DIR }}/${{ env.TERRAFORM_VAR_FILE }} \
+           -auto-approve ${{ env.PAAS_TF_DIR }}
       env:
         BACKEND_STORAGE_ACCOUNT_NAME: s121d01tfstatestr
         BACKEND_ACCESS_KEY: ${{ secrets.BACKEND_ACCESS_KEY }}
@@ -148,12 +145,6 @@ jobs:
         TF_VAR_password: ${{ secrets.TF_VAR_password }}
         TF_VAR_SECRET_KEY_BASE: ${{ secrets.TF_VAR_SECRET_KEY_BASE }}
         TF_VAR_SENTRY_DSN: ${{ secrets.TF_VAR_SENTRY_DSN }}
-        # Let's confirm if these variables are required
-        #TF_VAR_SETTINGS__GOOGLE__GCP_API_KEY: ${{ secrets.TF_VAR_SETTINGS__GOOGLE__GCP_API_KEY }}
-        #TF_VAR_SETTINGS__GOOGLE__MAPS_API_KEY: ${{ secrets.TF_VAR_SETTINGS__GOOGLE__MAPS_API_KEY }}
-        #TF_VAR_AUTHENTICATION_TOKEN: ${{ secrets.TF_VAR_AUTHENTICATION_TOKEN }}
-        #TF_VAR_SETTINGS__AUTHENTICATION__SECRET: ${{ secrets.SETTINGS__AUTHENTICATION__SECRET }}
         TF_VAR_SETTINGS__GOVUK_NOTIFY__API_KEY: ${{ secrets.SETTINGS__GOVUK_NOTIFY__API_KEY }}
         TF_VAR_SETTINGS__LOGSTASH__HOST: ${{ secrets.SETTINGS__LOGSTASH__HOST }}
-        #TF_VAR_SETTINGS__SYSTEM_AUTHENTICATION_TOKEN: ${{ secrets.SETTINGS__SYSTEM_AUTHENTICATION_TOKEN }}
-        # TF_VAR_APPINSIGHTS_INSTRUMENTATIONKEY: ${{ secrets.TF_VAR_APPINSIGHTS_INSTRUMENTATIONKEY }}
+
