--- a/config/settings.yml
+++ b/config/settings.yml
@@ -3,6 +3,10 @@ authentication:
   # Set this in the env! The below ensures that we are un-authenticatable if we
   # forget to do this in production.
   secret: <%= SecureRandom.base64 %>
+  issuer: "publish-teacher-training"
+  audience: "teacher-training-api"
+  subject: "access"
+
 current_recruitment_cycle_year: 2021
 allocation_cycle_year: 2020
 govuk_notify:
