Ignore yml files to avoid accidental commits

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,6 @@ terraform.tfstate.d/
 lock.json
 *secret*.tfvars
 .terraform/
+!terraform/workspace_variables/app_config.yml
+terraform/workspace_variables/*.yml
+terraform/workspace_variables/*.base64
