--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,7 +58,9 @@ jobs:
           ${{ env.DOCKER_IMAGE}}:${{ env.BRANCH_TAG }}
           ${{ env.DOCKER_IMAGE}}-middleman:master
           ${{ env.DOCKER_IMAGE}}-middleman:${{ env.BRANCH_TAG }}
-        build-args: BUILDKIT_INLINE_CACHE=1
+        build-args: |
+          BUILDKIT_INLINE_CACHE=1 
+          COMMIT_SHA=paas-${{ github.sha }}
 
     - name: Setup tests
       run: |
