--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,6 @@ steps:
     set +x # We confuse VSTS if we trace these commands
     echo "##vso[build.updatebuildnumber]$GIT_SHORT_SHA"
     echo "##vso[task.setvariable variable=docker_path;]$docker_path"
-    echo $(Build.SourceVersion) > COMMIT_SHA
   displayName: 'Set version number'
 
 - script: |
@@ -37,7 +36,7 @@ steps:
 - script: |
     set -x
     $DOCKER_OVERRIDE build middleman
-    $DOCKER_OVERRIDE build
+    $DOCKER_OVERRIDE build --build-arg COMMIT_SHA=$(Build.SourceVersion)
   displayName: Build Docker Images
   env:
     DOCKER_OVERRIDE: $(dockerOverride)
