--- a/swagger/public_v1/template.yml
+++ b/swagger/public_v1/template.yml
@@ -229,10 +229,10 @@ components:
       properties:
         name:
           type: string
-          example: "066"
+          example: "Oxford Brookes University"
         code:
           type: string
-          example: "Oxford Brookes University"
+          example: "O66"
     ProviderSuggestionListResponse:
       description: "This schema is used to return a collection of provider suggestions."
       type: object
