update app to not be API-only

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,13 @@ terraform.tfstate.d/
 lock.json
 *secret*.tfvars
 .terraform/
+
+# Ignore master key for decrypting credentials and more.
+/config/master.key
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
