add govuk styling from publish

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,3 +1,9 @@
+environment:
+  label: "Beta"
+  selector_name: "beta"
+service_support:
+  contact_email_address: becomingateacher@digital.education.gov.uk
+
 authentication:
   algorithm: HS256
   # Set this in the env! The below ensures that we are un-authenticatable if we
