--- a/package.json
+++ b/package.json
@@ -1,15 +1,26 @@
 {
   "name": "teacher-training-api",
   "private": true,
-  "dependencies": {
-    "@rails/actioncable": "^6.0.0",
-    "@rails/activestorage": "^6.0.0",
-    "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "5.2.1",
-    "turbolinks": "^5.2.0"
+
+  "engines": {
+    "node": "12.x"
   },
-  "version": "0.1.0",
+  "scripts": {
+    "test": "jest"
+  },
+  "dependencies": {
+    "@rails/webpacker": "^5.2.1",
+    "accessible-autocomplete": "^2.0.3",
+    "govuk-frontend": "^3.9.1",
+    "set-value": "^3.0.2"
+  },
   "devDependencies": {
-    "webpack-dev-server": "^3.11.1"
+    "jest": "^26.5.3",
+    "webpack-dev-server": "^3.11.0"
+  },
+  "jest": {
+    "roots": [
+      "app"
+    ]
   }
 }
