[452] DSI integration completed

--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -77,7 +77,7 @@ test:
   <<: *default
   # Azure pre-compiles packs prior to running the tests.
   # Also avoids race conditions in parallel_tests.
-  compile: false
+  compile: true
 
   public_output_path: packs-test
 
