[1114] Clean up for 37980e65c49efa548fdcb6638ab61878f26040e9

--- a/config/settings/test.yml
+++ b/config/settings/test.yml
@@ -9,3 +9,6 @@ bg_jobs:
     cron: "0 0 * * *" # daily at midnight
     class: "SaveStatisticJob"
     queue: save_statistic
+environment:
+  label: "development"
+  selector_name: "development"
