--- a/config/settings/development.yml
+++ b/config/settings/development.yml
@@ -5,3 +5,6 @@ mcbg:
 system_authentication_token: "Ge32"
 log_level: debug
 gcp_api_key: please_change_me
+environment:
+  label: "development"
+  selector_name: "development"
