--- a/config/settings/qa_paas.yml
+++ b/config/settings/qa_paas.yml
@@ -6,3 +6,6 @@ bg_jobs:
     cron: "0 0 * * *" # daily at midnight
     class: "SaveStatisticJob"
     queue: save_statistic
+environment:
+  label: "qa"
+  selector_name: "qa"
