--- a/config/settings/staging.yml
+++ b/config/settings/staging.yml
@@ -7,3 +7,6 @@ bg_jobs:
     cron: "0 0 * * *" # daily at midnight
     class: "SaveStatisticJob"
     queue: save_statistic
+environment:
+  label: "staging"
+  selector_name: "staging"
