--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -15,6 +15,7 @@ default: &default
     [
       "app/components",
       "node_modules/govuk-frontend/govuk",
+      "node_modules/@ministryofjustice/frontend",
     ]
     
   # Reload manifest.json on all requests so we reload latest compiled packs
